[gd_scene load_steps=3 format=3 uid="uid://bdioybepl7u2g"]

[ext_resource type="Script" uid="uid://d2hd6xxqv4nmn" path="res://UI/editor/item_placeholder.gd" id="1_nhbkl"]
[ext_resource type="Texture2D" uid="uid://bnu6u3g044pp5" path="res://icon.svg" id="3_ppbsh"]

[node name="ItemPlaceholder" type="Button"]
custom_minimum_size = Vector2(0, 32)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhbkl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainSprite" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_ppbsh")
expand_mode = 3

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="." to="." method="_on_pressed"]
